멀티쓰레드 방식 변경 (virtual Thread 사용)